--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^11.3.30",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-youtube": "^10.1.0",
     "sass": "^1.77.8"
   },
   "devDependencies": {
